--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "qrcode-of-this-site": "^1.0.2",
     "vue": "^2.6.10",
     "vue-faui-user-fe": "^0.0.13",
     "vue-router": "^3.0.3",
