--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-serve": "npx serve -s dist",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "qrcode-of-this-site": "^1.0.2",
+    "qrcode-of-this-site": "^1.0.5",
     "vue": "^2.6.11",
     "vue-faui-user-fe": "^0.0.29",
+    "vue-ga": "^1.1.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.14"
   },
