--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-faui-user-fe": "^1.0.15",
     "vue-ga": "^1.1.0",
     "vue-router": "^3.1.5",
-    "vuetify": "^2.2.14"
+    "vuetify": "^2.2.14",
+    "vuetify-nav": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
