--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^8.6.3",
     "qrcode-of-this-site": "^1.0.5",
     "vue": "^2.6.11",
-    "vue-faui-user-fe": "^1.0.44",
+    "vue-faui-user-fe": "^1.0.45",
     "vue-ga": "^1.1.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.14",
