--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "firebase": "^8.6.3",
+    "firebaseui": "^4.8.0",
     "qrcode-of-this-site": "^1.0.5",
     "vue": "^2.6.11",
-    "vue-faui-user-fe": "^1.0.45",
+    "vue-faui-user-fe": "^1.1.4",
     "vue-ga": "^1.1.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.14",
