--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "firebaseui": "^4.8.0",
     "qrcode-of-this-site": "^1.1.1",
     "vue": "^2.6.11",
-    "vue-faui-user-fe": "^1.1.7",
+    "vue-faui-user-fe2": "^1.0.20",
     "vue-ga": "^1.1.0",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.14",
@@ -30,8 +30,7 @@
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
